--- a/Backend/.env
+++ b/Backend/.env
@@ -1,2 +1,3 @@
 PORT=5000
 SECRET_KEY=dfghjklvvbkjhjcdcjdcjdbcjdb
+MONGO_URL=mongodb+srv://panchalpreet26:<db_password>@cluster0.mibwt4o.mongodb.net/
