--- a/Backend/.env
+++ b/Backend/.env
@@ -1,3 +1,3 @@
 PORT=5000
 SECRET_KEY=dfghjklvvbkjhjcdcjdcjdbcjdb
-MONGO_URL=mongodb+srv://panchalpreet26:<db_password>@cluster0.mibwt4o.mongodb.net/
+MONGO_URL=mongodb+srv://Preet:PREET%402004@cluster0.wueb1zm.mongodb.net/Zulas
